--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-fetch-mock": "^3.0.3",
 		"ts-jest": "^29.3.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.2",
 		"vite": "^6.2.0"
 	}
 }
